[package]
name = "flash_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_console.workspace = true
deno_core.workspace = true
deno_fetch.workspace = true
deno_flash2.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true

futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }

[build-dependencies]
deno_core.workspace = true
deno_flash2.workspace = true
deno_webidl.workspace = true
deno_console.workspace = true
deno_web.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
