# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_flash2"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Fast HTTP/1 server implementation for Deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_tls.workspace = true
# For HTTP/2 and websocket upgrades
deno_websocket.workspace = true
http.workspace = true
httparse = "1.8"
httpdate = "1.0.2"
libc.workspace = true
log.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
socket2.workspace = true
tokio.workspace = true
