# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_wasi"
version = "0.1.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"
description = "WASI implementation for Deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core = { path = "../../core", version = "0.147.0" }
libc = "0.2"
